# donut_aggregate

./: .gitignore  README.md  after_timestamp_to_date.py  gpu_detector.py  install.sh  main.py  ocr_donut_aggregate.py  ocr_engine.py  parallel_ocr.py  pyproject.toml  requirements-amd-rocm.txt  requirements-apple-silicon.txt  requirements-nvidia-cuda.txt  requirements.txt  test_ocr.py
.serena/: project.yml
