[project]
name = "donut-aggregate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "opencv-python>=4.13.0.90",
    "pandas>=3.0.0",
    "tqdm>=4.67.1",
    "torch>=2.10.0",  # 追加
    "torchvision>=0.25.0",  # 追加
    "torchaudio>=2.10.0",  # 追加
]

# 以下を追加
[tool.uv]
index-url = "https://download.pytorch.org/whl/rocm7.1"

# または、PyTorchのみROCm版を使う場合
[tool.uv.sources]
torch = { index = "pytorch-rocm" }
torchvision = { index = "pytorch-rocm" }
torchaudio = { index = "pytorch-rocm" }

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.1"
explicit = true
